--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.1",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.4.3",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
